--- a/README
+++ b/README
@@ -2,6 +2,6 @@
 
 Usage:
 
-1. > git clone https://github.com/ExSumbiT/bfiles_api.git
-2. > pip install -r requirements.txt
-3. > python main.py
+> git clone https://github.com/ExSumbiT/bfiles_api.git
+> pip install -r requirements.txt
+> python main.py
